--- a/looks.css
+++ b/looks.css
@@ -23,11 +23,11 @@
     background-color: khaki;
     display:block;
     margin: auto;
-    max-height: 500px;
+    max-height: 600px;
     max-width: 500px;
 
   }
 
   .centerIt {text-align: center;}
 
-  
+.bodyClass {background-color: lightcoral;}
